<resources>
    <string name="app_name">ABCall</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">ChatBot</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="fab_content_desc">agregar</string>
    <string name="usuario">Enter your username</string>
    <string name="ingrese_usuario">Username</string>
    <string name="contrasena">Enter your password</string>
    <string name="ingrese_contrasena">Password</string>
    <string name="login">Login</string>
    <string name="Inicio">Home ABCall</string>
    <string name="nombre_usuario">Name</string>
    <string name="nombre_empresa">Company:</string>
    <string name="tipo_comunicacion">Communication: </string>
    <string name="ingrese_comunicacion">Choose Communication</string>
    <string name="Editar">Edit</string>
    <string name="Guardar">Save</string>
    <string name="Enviar">Send</string>
    <string name="Cancelar">Cancel</string>
    <string name="Formato_Hora">hh:mm</string>
    <string name="Hora">Actual Time</string>
    <string name="Notificacion">Notification</string>
    <string name="Estado">Open</string>
    <string name="Conversacion">Conversation Started</string>
    <string name="Inicio_chat">How can we help you today?</string>
    <string name="Titulo_pqr">Title</string>
    <string name="Hint_Titulo_pqr">Enter the Title</string>
    <string name="Tipo_pqr">What type of PQR is it?</string>
    <string name="Descripcion">Description</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">Login successful</string>
    <string name="login_error">Error: idToken no válido</string>
    <string name="login_empty_fields">Por favor, ingresa tu usuario y contraseña</string>
    <string name="login_failed">Error en la autenticación: %1$s</string>
    <string name="incomplete_data">incomplete data</string>
    <string name="PQR_error">Error creating PQR</string>
    <string name="Crear_PQR">Create PQR</string>
    <string name="Detalle_PQR">PQR Details</string>
    <string name="bot_conversation_started">Bot conversation started</string>
    <string name="PQR_get_error">Error obtaining PQR</string>
    <string name="No_PQRs">You currently have no open PQRs</string>
    <string name="success">Success</string>
    <string name="PQR_success">Your PQR has been created successfully</string>
    <string name="Accept">Accept</string>
    <string name="current_time">Current Time</string>
    <string name="current_date">Current Date</string>
    <string name="Fecha">21/10/2024</string>
    <string name="Bot_response">This is a bot response</string>
    <string name="Bot_welcome">Welcome to your ABCall assistant!</string>
    <string name="titulo_modificar">Edit Profile</string>
    <string name="Perfil">Profile</string>
    <string name="Modificar_Perfil">Edit Profile</string>
    <string name="pqr_message">To open a PQR, click on the following link:\n%s1</string>
    <string name="pqr_link_text">Open PQR form</string>
    <string name="bot_response_error">Error: Failed to get bot response.</string>
    <string name="enter_full_name">Enter full name"</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="profile_update_error">Profile update error: %1$s</string>
    <string name="unknown_error">Unknow error</string>
    <string name="auth_token_error">Auth token Error</string>
    <string name="auth_request_error">Authentication request Error.</string>
    <string name="pqr_creation_error">PQR creation Error</string>
    <string name="new_pqr_created">New PQR #%1$s Creaded</string>
    <string name="network_error">Network Error: %1$s</string>
    <string name="authentication_error">Authentication Error: %1$s</string>
</resources>