<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.abcallapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.example.abcallapp.ui.chatbot.ChatbotFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.abcallapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_create_pqr"
        android:name="com.example.abcallapp.ui.pqr.CreatePQRFragment"
        android:label="@string/Crear_PQR"
        tools:layout="@layout/fragment_create_pqr" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.abcallapp.ui.profile.ProfileFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/activity_profile_fragment">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"/>
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.abcallapp.ui.home.EditProfileFragment"
        android:label="@string/Modificar_Perfil"
        tools:layout="@layout/activity_edit_profile_fragment" />


    <fragment
        android:id="@+id/detallePQRFragment"
        android:name="com.example.abcallapp.ui.pqr.DetallePQRFragment"
        android:label="@string/Detalle_PQR"
        tools:layout="@layout/fragment_detalle_pqr" />

    <action
        android:id="@+id/action_home_to_detallePQRFragment"
        app:destination="@id/detallePQRFragment" />


</navigation>