<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Imagen de fondo difuminada -->

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/front_appchat3"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-219dp" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:scaleType="centerCrop"
        android:src="@drawable/foto_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nombre del usuario -->
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:textStyle="bold"
        android:textColor="@color/gray_700"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Correo electrónico -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textColor="@color/gray_700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label para Empresa -->
    <TextView
        android:id="@+id/companyLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_empresa"
        android:textColor="@color/gray_700"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Nombre de la Empresa -->
    <TextView
        android:id="@+id/companyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_empresa"
        android:textColor="@color/gray_700"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/companyLabelTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label para Tipo de Comunicación -->
    <TextView
        android:id="@+id/communicationLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_comunicacion"
        android:textColor="@color/gray_700"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/companyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tipo de Comunicación -->
    <TextView
        android:id="@+id/communicationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_comunicacion"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/gray_700"
        app:layout_constraintTop_toBottomOf="@id/communicationLabelTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Layout para la Fecha Actual -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/communicationLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/currentDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:textColor="@color/gray_700" />

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="dd/mm/yyyy"
            android:textColor="@color/gray_700" />
    </LinearLayout>

    <!-- Layout para la Hora Actual -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:id="@+id/currentTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time"
            android:textColor="@color/gray_700" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="HH:mm"
            android:textStyle="bold"
            android:textColor="@color/gray_700"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Botón para editar información -->
    <Button
        android:id="@+id/editButton"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Editar"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintVertical_bias="0.445" />

</androidx.constraintlayout.widget.ConstraintLayout>


