<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_500"
    android:id="@+id/fragment_login"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="414dp"
        android:layout_height="495dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/Brand_view"
            android:layout_width="776dp"
            android:layout_height="1034dp"
            android:alpha="0.5"
            android:background="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573"
            app:srcCompat="@drawable/front_appchat"
            tools:srcCompat="@drawable/front_appchat3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/app_name"
            android:textColor="@color/gray_500"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.323" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="406dp"
        android:layout_height="353dp"
        android:background="@color/gray_500"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/ingrese_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="75dp"
            android:layout_weight="1"
            android:text="@string/ingrese_usuario"
            android:textColor="@android:color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/gray_500"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:height="48dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/usuario"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ingrese_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/ingrese_contrasena"
            android:textColor="@color/white"
            app:endIconTint="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/gray_500"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintEnabled="false"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:height="48dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_button"
            android:elevation="8dp"
            android:onClick="onLoginButtonClick"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:cornerRadius="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>