<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.EditProfileFragment">

 
    <!-- Imagen de fondo difuminada -->

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/front_appchat3"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="-133dp" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="142dp"
        android:layout_height="150dp"
        android:layout_marginTop="72dp"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@drawable/foto_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nombre del usuario -->
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nombre_usuario"
        android:textColor="@color/gray_500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userImage" />

    <!-- Correo electrónico -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/prompt_email"
        android:textColor="@color/gray_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameEditLayout"
        style="@style/OutlinedBox_Edit"
        android:layout_width="296dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:hint="@string/nombre_usuario"
        android:textColor="@color/gray_700"
        android:textColorHint="@color/gray_700"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/gray_700"
            android:textColorHint="@color/gray_700"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="465dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Tipo de Comunicación -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipoComunicacion"
        style="@style/Dropbox_Edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/ingrese_comunicacion"
        android:inputType="none"
        android:textColor="@color/gray_700"
        android:textColorHint="@color/gray_700"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconTint="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditLayout">

        <AutoCompleteTextView
            android:id="@+id/tipoComunicacionEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:entries="@array/tipo_comunicacion_opciones"
            android:popupBackground="#CCFFFFFF"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="465dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Cancelar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="32dp"
        android:elevation="8dp"
        android:text="@string/Cancelar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/gray_700"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botón Salvar cambios -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/savePerfilButton"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:elevation="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"
        app:cornerRadius="20dp"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>